# sara_description

./: README.md
config/: controllers.yaml
description/: CMakeLists.txt  README.md  package.xml
description/config/: controllers.yaml  gazebo_ros_control.yaml
description/launch/: sara_description.launch
description/meshes/: base.STL  base_xtion.STL  coude.STL  epaule1.STL  head_xtion.STL  torse.STL
description/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro  robotiq_2f_85_transmission_macro.xacro
description/urdf/: sara.gazebo.xacro  sara.urdf.xacro
description/urdf/arm_v2/: arm.urdf.xacro
description/urdf/base_v2/: base.gazebo.xacro  base.urdf.xacro
description/urdf/head_v1/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
description/urdf/head_xtion/: head_xtion.gazebo.xacro
description/urdf/hokuyo/: hokuyo.gazebo.xacro
description/urdf/linear_actuator_v1/: actuator.transmission.xacro
description/urdf/mecanum_wheel/: mecanum_wheel.gazebo.xacro  mecanum_wheel.transmission.xacro  mecanum_wheel.urdf.xacro
description/urdf/neck_v1/: neck.transmission.xacro
description/urdf/torso_v1/: torso.gazebo.xacro
description/worlds/: house.world
launch/: sara_description.launch  sara_description_test.launch  test_robotiq_c2_model.launch
meshes/: WRA-01.STL  WRA-02.STL  WRA-03.STL  attache_pince.STL  avant-bras.STL  avant_bras.STL  base_xtion.STL  bras_haut.STL  couV2.STL  coude.STL  epaule1.STL  epaule2.STL  head_xtion.STL  poignet_bas.STL  poignet_haut.STL  saraRightArm_wrist1.STL  saraRightArm_wrist2.STL  support_base_xtion.STL  support_poignet.STL  tete.STL  xtion.STL  xtion_bras.STL
robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro
urdf/: sara.gazebo.xacro  sara.urdf  sara.urdf.xacro
urdf/arm_v1/: arm.gazebo.xacro  arm.urdf.xacro
urdf/arm_v2/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
urdf/arm_xtion/: arm_xtion.urdf.xacro
urdf/base_v1/: base.gazebo.xacro  base.urdf.xacro
urdf/base_v2/: base.gazebo.xacro  base.urdf.xacro
urdf/base_xtion/: base_xtion.gazebo.xacro  base_xtion.urdf.xacro
urdf/head_v1/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
urdf/head_xtion/: head_xtion.gazebo.xacro  head_xtion.urdf.xacro
urdf/hokuyo/: hokuyo.gazebo.xacro  hokuyo.urdf.xacro
urdf/kinect2/: kinect2.gazebo.xacro  kinect2.urdf.xacro
urdf/kinect_v1/: kinect.gazebo.xacro  kinect.urdf.xacro
urdf/linear_actuator_v1/: actuator.gazebo.xacro  actuator.transmission.xacro  actuator.urdf.xacro
urdf/neck_v1/: neck.gazebo.xacro  neck.transmission.xacro  neck.urdf.xacro
urdf/robotiq_c2_model/: robotiq_c2_model.gazebo.xacro
urdf/torso_v1/: torso.gazebo.xacro  torso.urdf.xacro
urdf/wheels_v1/: wheels.gazebo.xacro
urdf/xtion/: xtion.urdf.xacro
